--- a/capstone/HTML/homepage.html
+++ b/capstone/HTML/homepage.html
@@ -79,7 +79,30 @@ p {
             <button class="try-btn">Try it Yourself</button>
         </div>
     </section>
+
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="#">Khóa học thịnh hành</a>
+                <a href="#">Blog</a>
+                <a href="#">Thành viên</a>
+                <a href="#">Mục xem nhiều</a>
+            </div>
+            <div class="footer-about">
+                <p>Về chúng tôi</p>
+                <p>C1SE.61-CapStone là nơi giúp các bạn học tập...</p>
+            </div>
+            <div class="footer-follow">
+                <p>Theo dõi chúng tôi</p>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-google"></i></a>
+                <a href="#"><i class="fa-brands fa-square-github"></i></a>
+            </div>
+        </div>
+        <p class="copyright">© Copyright 2025 SochiDev. All rights reserved</p>
+    </footer>
 </body>
 
-<script src="../js/javascript/reloading.js"></script>
+<script src="../js/reloading.js"></script>
 </html>
